# cppAlgo

./: .gitignore  CMakeLists.txt
include/find_the_k_or_of_an_array/: solution.h
include/two_sum/: solution.h
src/find_the_k_or_of_an_array/: solution.cpp
src/two_sum/: solutions.cpp
tests/find_the_k_or_of_an_array/: kor_test.cpp
tests/two_sum/: sum_test.cpp
